I have updated `pom.xml` to downgrade Spring Boot and Java versions, and adjusted the dependencies as planned. I verified the changes by reading the file.
I have created the custom annotations `@Tool` and `@ToolParam` and verified their creation. I am now ready to move on to the next step.

I have implemented the tool registry and MCP controller, and verified the file creation. I am now ready to move on to the next step.

I have refactored `DemoTools.java` for JDK 8 compatibility and verified the changes. I am now ready to move on to the next step.

I have refactored `CozeWorkflowService.java` for JDK 8 compatibility and verified the changes. I am now ready to move on to the next step.

I have successfully built and tested the application. I am now ready to move on to the next step.

I have updated the `pom.xml` to add the `-parameters` flag to the `maven-compiler-plugin` configuration and verified the change. I am now ready to move on to the next step.

I have removed the `app.log` file and added `app.log` and `logs/` to the `.gitignore` file. I am now ready to move on to the next step.

I have added a final newline character to `CozeWorkflowService.java` and `DemoTools.java` and verified the changes. I am now ready to move on to the next step.

I have successfully rebuilt and re-tested the application. I am now ready to move on to the next step.

I am now ready to move on to the next step.